Found bug in larger screen sizes with Bio and Connect overlap
a
'
:

--- a/src/components/Bio/Bio.module.scss
+++ b/src/components/Bio/Bio.module.scss
@@ -19,6 +19,9 @@
   @media (min-width: 1400px) {
     top: 6rem;
   }
+  @media (min-width: 1900px) {
+    top: 7rem;
+  }
 }
 
 .bioContainerInactive {
